@@ -3,7 +3,10 @@
 
 #include <stdio.h>
 #include <stdlib.h>
+#include "bits.h"
 
-long long replicate(long long number, int amount);
+int DecodeBitMasks(unsigned int N, unsigned int imms, unsigned int immr, int immediate, unsigned long *out);
+int MoveWidePreferred(unsigned int sf, unsigned int immN, unsigned int immr, unsigned int imms);
+
 
 #endif
