@@ -1,3 +1,7 @@
+11-23-18
+- forgot about this changelog
+- implemented logical (immediate) instructions
+
 11-18-18
 
 - initial commit
